--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./src/styles/reset.css" />
+  <link rel="stylesheet" href="./src/styles/style.css">
   <!-- <link rel="stylesheet" href="./src/styles/header.css" />
   <link rel="stylesheet" href="./src/styles/main.css" />
   <link rel="stylesheet" href="./src/styles/footer.css" />
@@ -28,15 +29,112 @@
   <header>
     <img src="./src/images/logo.png" alt="Logo da clinica 'Coluna sem dor'">
     <nav>
-      <a href=""></a>
-      <a href=""></a>
-      <a href=""></a>
-      <a href=""></a>
+      <a href="">HOME</a>
+      <a href="">SERVIÇOS</a>
+      <a href="">QUEM SOMOS</a>
+      <a href="">CONTATO</a>
     </nav>
-    <button><img src="./src/images/icon-instagram.svg" alt=""></button>
-    <button><img src="./src/images/icon-tiktok.svg" alt=""></button>
-    <button><img src="./src/images/icon-whatsapp.svg" alt=""></button>
+    <div class="div-navbar-buttons">
+      <button class="navbar-buttons"><img src="./src/images/icon-instagram.svg" alt="" class="navbar-icons"></button>
+      <button class="navbar-buttons"><img src="./src/images/icon-tiktok.svg" alt="" class="navbar-icons"></button>
+      <button class="navbar-buttons"><img src="./src/images/icon-whatsapp.svg" alt="" class="navbar-icons"></button>
+    </div>
   </header>
+  <main class="hero">
+    <aside>
+      <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
+      <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
+      <button><a href="">Quero Alívio Agora!</a></button>
+    </aside>
+  </main>
+  <section class="tratamentos">
+    <aside>
+      <h1>Tratamentos Avançados para 
+        Corpo e Mente em Equilíbrio</h1>
+      <h2>Combinação de terapias que aceleram sua recuperação e melhoram sua qualidade de vida</h2>
+      <ul>
+        <li>Quiropraxia: Realinhamento vertebral para alívio rápido de dores crônicas</li>
+        <li>Maca de Flexo-distração: Técnica segura para hérnias e compressões</li>
+        <li>Ondas de Choque: Estimula a regeneração de tecidos lesionados</li>
+        <li>Fotobiomodulação: Terapia com laser para redução de inflamações</li>
+        <li>Ozonioterapia: Imunidade fortalecida e ação anti-inflamatória</li>
+        <li>Ultrassom Terapêutico: Tratamento profundo para lesões musculares</li>
+        <li>Termografia: Diagnóstico preciso sem radiação</li>
+        <li>Pilates Clínico: Força, flexibilidade e reabilitação funcional</li>
+      </ul>
+      <button>
+        <a href="">Descubra Seu Tratamento!</a>
+      </button>
+    </aside>
+    <div class="tratamentos-images">
+      <img src="" alt="">
+      <img src="" alt="">
+      <img src="" alt="">
+    </div>
+  </section>
+  <section class="dra-alessandra">
+    <img src="" alt="">
+    <aside>
+      <h1>Dra. Alessandra</h1>
+      <h2>Especialidades</h2>
+      <ul class="list">
+        <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia clínica</li>
+        <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia diversificada de Janse</li>
+        <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia método thompson</li>
+        <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia instrumental (TIQ)</li>
+        <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia clínica</li>
+        <li class="list-item"><img src="." alt="" class="list-img">Terapia Crânio Sacral</li>
+        <li class="list-item"><img src="." alt="" class="list-img">Dry needling </li>
+        <li class="list-item"><img src="." alt="" class="list-img">Terapia de liberação muscular</li>
+        <li class="list-item"><img src="." alt="" class="list-img">Fotobiomodulacao</li>
+        <li class="list-item"><img src="." alt="" class="list-img">Pilates clássico e Pilates Avançado</li>
+        <li class="list-item"><img src="." alt="" class="list-img">Pós graduação em Dermatofuncional e Cosmetologia</li>
+      </ul>
+    </aside>
+  </section>
+  <section class="sobre-nos">
+    <aside>
+      <h1>Sobre nós</h1>
+      <p>A Clínica Coluna Sem Dor foi inaugurada em janeiro de 2020, com o objetivo de oferecer aos pacientes com dor crônica, especialmente na coluna, um espaço especializado para tratamento de qualidade e personalizado. Apesar do desafio inicial da pandemia, conseguimos crescer e melhorar nossas instalações, incorporando novas técnicas e tecnologias para melhorar os resultados.<br>
+        Atualmente, contamos com a Maca de Flexodistração, que permite tração, mobilizações e manipulações realizadas da coluna. Além disso, oferecemos tratamentos como Quiropraxia, Ozonioterapia, Ondas de Choque, Fisioterapia Regenerativa Eco Guiada e Pilates, todas as apresentações para o transtorno e reabilitação da coluna.<br>
+        Nosso atendimento é conduzido pela fisioterapeuta e fundadora da clínica, Alessandra Souza, formada há 11 anos e especializada no tratamento de coluna. O Pilates, uma das práticas mais recomendadas para quem sofre com dores na coluna, é aplicado pelas instrutoras especializadas Marcia Pirrozelle e Geovana Souza. Assim, oferecemos um atendimento integrado e de alta qualidade, adequado às necessidades de cada paciente.</p>
+    </aside>
+    <img src="" alt="">
+  </section>
+  <section class="depoimentos">
+    <h1>Depoimentos de Quem Voltou a Viver Sem Dor</h1>
+    <div class="depoimento-area"></div>
+    <button><a href="">Quero Me Sentir Melhor!</a></button>
+  </section>
+  <section class="contato">
+    <aside>
+      <h1>Contato</h1>
+      <div class="contato-text">
+        <img src="" alt="">
+        <p>DÚVIDAS E INFORMAÇÕES:<br>
+          (11) 96357-1929<br>
+          oficialcolunasemdor@gmail.com</p>
+      </div>
+      <div class="contato-text">
+        <img src="" alt="">
+        <p>ONDE ESTAMOS:<br>
+          Rua São Benedito, 418 - Jardim Santo Amaro, São Paulo - SP</p>
+      </div>
+      <div class="contato-text">
+        <img src="" alt="">
+        <p>CONHEÇA E ACOMPANHE<br>
+          A NOSSA REDES SOCIAIS</p>
+      </div>
+      <button><img src="./src/images/icon-instagram.svg" alt=""></button>
+      <button><img src="./src/images/icon-tiktok.svg" alt=""></button>
+      <button><img src="./src/images/icon-whatsapp.svg" alt=""></button>
+    </aside>
+  </section>
+  <footer>
+    <img src="./src/images/logo.png" alt="">
+    <p>©Coluna sem dor, 2025 Todos os direitos reservados</p>
+    <img src="./src/images/icon-whatsapp.svg" alt="">
+  </footer>
 </body>
 <!-- <body> 
 
