--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
   </header>
   <main class="hero">
-    <aside>
+    <aside class="hero-aside">
       <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
       <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
       <button><a href="">Quero Alívio Agora!</a></button>
