--- a/index.html
+++ b/index.html
@@ -48,23 +48,20 @@
     </aside>
   </main>
   <section class="tratamentos">
-    <aside>
-      <h1>Tratamentos Avançados para 
-        Corpo e Mente em Equilíbrio</h1>
+    <aside class="tratamentos-aside">
+      <h1>Tratamentos Avançados para Corpo e Mente em Equilíbrio</h1>
       <h2>Combinação de terapias que aceleram sua recuperação e melhoram sua qualidade de vida</h2>
-      <ul>
-        <li>Quiropraxia: Realinhamento vertebral para alívio rápido de dores crônicas</li>
-        <li>Maca de Flexo-distração: Técnica segura para hérnias e compressões</li>
-        <li>Ondas de Choque: Estimula a regeneração de tecidos lesionados</li>
-        <li>Fotobiomodulação: Terapia com laser para redução de inflamações</li>
-        <li>Ozonioterapia: Imunidade fortalecida e ação anti-inflamatória</li>
-        <li>Ultrassom Terapêutico: Tratamento profundo para lesões musculares</li>
-        <li>Termografia: Diagnóstico preciso sem radiação</li>
-        <li>Pilates Clínico: Força, flexibilidade e reabilitação funcional</li>
+      <ul class="tratamentos-ul">
+        <li class="tratamentos-li"><span class="tratamentos-span">Quiropraxia:</span> Realinhamento vertebral para alívio rápido de dores crônicas</li>
+        <li class="tratamentos-li"><span class="tratamentos-span">Maca de Flexo-distração:</span> Técnica segura para hérnias e compressões</li>
+        <li class="tratamentos-li"><span class="tratamentos-span">Ondas de Choque:</span> Estimula a regeneração de tecidos lesionados</li>
+        <li class="tratamentos-li"><span class="tratamentos-span">Fotobiomodulação:</span> Terapia com laser para redução de inflamações</li>
+        <li class="tratamentos-li"><span class="tratamentos-span">Ozonioterapia:</span> Imunidade fortalecida e ação anti-inflamatória</li>
+        <li class="tratamentos-li"><span class="tratamentos-span">Ultrassom Terapêutico:</span> Tratamento profundo para lesões musculares</li>
+        <li class="tratamentos-li"><span class="tratamentos-span">Termografia:</span> Diagnóstico preciso sem radiação</li>
+        <li class="tratamentos-li"><span class="tratamentos-span">Pilates Clínico:</span> Força, flexibilidade e reabilitação funcional</li>
       </ul>
-      <button>
-        <a href="">Descubra Seu Tratamento!</a>
-      </button>
+      <a href="">Descubra Seu Tratamento!</a>
     </aside>
     <div class="tratamentos-images">
       <img src="" alt="">
