--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
       <a href="">Descubra Seu Tratamento!</a>
     </aside>
     <div class="tratamentos-images">
-      <img src="./src/images/serv-1.jpeg" alt="" class="tratamentos-photos">
+      <div class="tratamentos-images-left">
+        <img src="./src/images/serv-1.jpeg" alt="" class="tratamentos-photos">
+      </div>
       <div class="tratamentos-images-center">
         <img src="./src/images/serv-2.jpeg" alt="" class="tratamentos-photos">
         <img src="./src/images/serv-3.jpeg" alt="" class="tratamentos-photos">
+      </div>
+      <div class="tratamentos-images-right">
+        <img src="./src/images/serv-1.jpeg" alt="" class="tratamentos-photos">
       </div>
     </div>
   </section>
