fix: tratamentos section

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
     </div>
   </section>
   <section class="dra-alessandra">
-    <img src="" alt="">
+    <img src="./src/images/dra-alessandra.png" alt="">
     <aside>
       <h1>Dra. Alessandra</h1>
       <h2>Especialidades</h2>
       <ul class="list">
-        <li class="list-item"><img src="../colunasemdor/src/images/icon-tiktok.svg" alt="" class="list-img">Quiropraxia
+        <li class="list-item"><img src="../colunasemdor/src/images/workspace_premium.png" alt="" class="list-img">Quiropraxia
           clínica</li>
         <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia diversificada de Janse</li>
         <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia método thompson</li>
