--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </div>
   </section>
   <section class="dra-alessandra">
-    <img src="./src/images/dra-alessandra.png" alt="">
-    <aside>
+    <img src="./src/images/dra-alessandra.png" alt="" class="dra-alessandra-image">
+    <aside class="dra-alessandra-aside">
       <h1>Dra. Alessandra</h1>
       <h2>Especialidades</h2>
       <ul class="list">
