--- a/index.html
+++ b/index.html
@@ -90,18 +90,17 @@
       <h1>Dra. Alessandra</h1>
       <h2>Especialidades</h2>
       <ul class="list">
-        <li class="list-item"><img src="../colunasemdor/src/images/workspace_premium.png" alt="" class="list-img">Quiropraxia
-          clínica</li>
-        <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia diversificada de Janse</li>
-        <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia método thompson</li>
-        <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia instrumental (TIQ)</li>
-        <li class="list-item"><img src="." alt="" class="list-img">Quiropraxia clínica</li>
-        <li class="list-item"><img src="." alt="" class="list-img">Terapia Crânio Sacral</li>
-        <li class="list-item"><img src="." alt="" class="list-img">Dry needling </li>
-        <li class="list-item"><img src="." alt="" class="list-img">Terapia de liberação muscular</li>
-        <li class="list-item"><img src="." alt="" class="list-img">Fotobiomodulacao</li>
-        <li class="list-item"><img src="." alt="" class="list-img">Pilates clássico e Pilates Avançado</li>
-        <li class="list-item"><img src="." alt="" class="list-img">Pós graduação em Dermatofuncional e Cosmetologia</li>
+        <li class="list-item">Quiropraxia clínica</li>
+        <li class="list-item">Quiropraxia diversificada de Janse</li>
+        <li class="list-item">Quiropraxia método thompson</li>
+        <li class="list-item">Quiropraxia instrumental (TIQ)</li>
+        <li class="list-item">Quiropraxia clínica</li>
+        <li class="list-item">Terapia Crânio Sacral</li>
+        <li class="list-item">Dry needling </li>
+        <li class="list-item">Terapia de liberação muscular</li>
+        <li class="list-item">Fotobiomodulacao</li>
+        <li class="list-item">Pilates clássico e Pilates Avançado</li>
+        <li class="list-item">Pós graduação em Dermatofuncional e Cosmetologia</li>
       </ul>
     </aside>
   </section>
