fix: contato section

--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
       <h1>Dra. Alessandra</h1>
       <h2>Especialidades</h2>
       <ul class="list">
-        <li class="list-item">Quiropraxia clínica</li>
-        <li class="list-item">Quiropraxia diversificada de Janse</li>
-        <li class="list-item">Quiropraxia método thompson</li>
-        <li class="list-item">Quiropraxia instrumental (TIQ)</li>
-        <li class="list-item">Quiropraxia clínica</li>
-        <li class="list-item">Terapia Crânio Sacral</li>
-        <li class="list-item">Dry needling </li>
-        <li class="list-item">Terapia de liberação muscular</li>
-        <li class="list-item">Fotobiomodulacao</li>
-        <li class="list-item">Pilates clássico e Pilates Avançado</li>
-        <li class="list-item">Pós graduação em Dermatofuncional e Cosmetologia</li>
+        <li class="list-item"><span class="list-image"></span>Quiropraxia clínica</li>
+        <li class="list-item"><span class="list-image"></span>Quiropraxia diversificada de Janse</li>
+        <li class="list-item"><span class="list-image"></span>Quiropraxia método thompson</li>
+        <li class="list-item"><span class="list-image"></span>Quiropraxia instrumental (TIQ)</li>
+        <li class="list-item"><span class="list-image"></span>Quiropraxia clínica</li>
+        <li class="list-item"><span class="list-image"></span>Terapia Crânio Sacral</li>
+        <li class="list-item"><span class="list-image"></span>Dry needling </li>
+        <li class="list-item"><span class="list-image"></span>Terapia de liberação muscular</li>
+        <li class="list-item"><span class="list-image"></span>Fotobiomodulacao</li>
+        <li class="list-item"><span class="list-image"></span>Pilates clássico e Pilates Avançado</li>
+        <li class="list-item"><span class="list-image"></span>Pós graduação em Dermatofuncional e Cosmetologia</li>
       </ul>
     </aside>
   </section>
@@ -123,20 +123,22 @@
   </section>
   <section class="depoimentos">
     <h1>Depoimentos de Quem Voltou a Viver Sem Dor</h1>
-    <div class="depoimento-area"></div>
-    <button><a href="">Quero Me Sentir Melhor!</a></button>
+    <div class="depoimento-area">
+
+    </div>
+    <a href="">Quero Me Sentir Melhor!</a>
   </section>
   <section class="contato">
-    <aside>
+    <aside class="contato-aside">
       <h1>Contato</h1>
       <div class="contato-text">
-        <img src="" alt="">
+        <img src="./src/images/icon-whatsapp-black.svg" alt="">
         <p>DÚVIDAS E INFORMAÇÕES:<br>
           (11) 96357-1929<br>
           oficialcolunasemdor@gmail.com</p>
       </div>
       <div class="contato-text">
-        <img src="" alt="">
+        <img src="./src/images/icon-location-black.svg" alt="">
         <p>ONDE ESTAMOS:<br>
           Rua São Benedito, 418 - Jardim Santo Amaro, São Paulo - SP</p>
       </div>
@@ -145,10 +147,11 @@
         <p>CONHEÇA E ACOMPANHE<br>
           A NOSSA REDES SOCIAIS</p>
       </div>
-      <button><img src="./src/images/icon-instagram.svg" alt=""></button>
-      <button><img src="./src/images/icon-tiktok.svg" alt=""></button>
-      <button><img src="./src/images/icon-whatsapp.svg" alt=""></button>
+      <button class="contato-button"><img src="./src/images/icon-instagram-black.svg" alt=""></button>
+      <button class="contato-button"><img src="./src/images/icon-tiktok-black.svg" alt=""></button>
+      <button class="contato-button"><img src="./src/images/icon-linkedin-black.svg" alt=""></button>
     </aside>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.74478100944!2d-46.7018355!3d-23.6493094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b4bb5ee23%3A0x602b54d54441b2c7!2sColuna%20Sem%20Dor%20-%20Clinica%20de%20Quiropraxia%20e%20Fisioterapia!5e0!3m2!1sen!2sbr!4v1748799978357!5m2!1sen!2sbr" width="60%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
   <footer>
     <img src="./src/images/logo.png" alt="">
