--- a/index.html
+++ b/index.html
@@ -151,11 +151,24 @@
       <button class="contato-button"><img src="./src/images/icon-tiktok-black.svg" alt=""></button>
       <button class="contato-button"><img src="./src/images/icon-linkedin-black.svg" alt=""></button>
     </aside>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.74478100944!2d-46.7018355!3d-23.6493094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b4bb5ee23%3A0x602b54d54441b2c7!2sColuna%20Sem%20Dor%20-%20Clinica%20de%20Quiropraxia%20e%20Fisioterapia!5e0!3m2!1sen!2sbr!4v1748799978357!5m2!1sen!2sbr" width="60%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.74478100944!2d-46.7018355!3d-23.6493094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b4bb5ee23%3A0x602b54d54441b2c7!2sColuna%20Sem%20Dor%20-%20Clinica%20de%20Quiropraxia%20e%20Fisioterapia!5e0!3m2!1sen!2sbr!4v1748799978357!5m2!1sen!2sbr"
+      width="60%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
   <footer>
-    <img src="./src/images/logo.png" alt="">
-    <p>©Coluna sem dor, 2025 Todos os direitos reservados</p>
-    <img src="./src/images/icon-whatsapp.svg" alt="">
+    <div class="footer-wrapper">
+      <div class="footer-image">
+        <img src="./src/images/logo.png" alt="Logo Coluna Sem Dor" class="footer-logo" />
+      </div>
+      <div class="footer-text">
+        <p>© Coluna sem dor, 2025 Todos os direitos reservados</p>
+      </div>
+      <div class="footer-whatsapp">
+        <a href="https://wa.me/5511963571929" target="_blank">
+          <img src="./src/images/icon-whatsapp-black.svg" alt="WhatsApp" class="whatsapp-icon" />
+        </a>
+      </div>
+    </div>
   </footer>
 </body>
