--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -133,13 +131,13 @@
     <aside>
       <h1>Contato</h1>
       <div class="contato-text">
-        <img src="" alt="">
+        <img src="/src/images/Frame/zap.png" alt="">
         <p>DÚVIDAS E INFORMAÇÕES:<br>
           (11) 96357-1929<br>
           oficialcolunasemdor@gmail.com</p>
       </div>
       <div class="contato-text">
-        <img src="" alt="">
+        <img src="/src/images/Frame/localidade.png" alt="">
         <p>ONDE ESTAMOS:<br>
           Rua São Benedito, 418 - Jardim Santo Amaro, São Paulo - SP</p>
       </div>
@@ -148,10 +146,13 @@
         <p>CONHEÇA E ACOMPANHE<br>
           A NOSSA REDES SOCIAIS</p>
       </div>
-      <button><img src="./src/images/icon-instagram.svg" alt=""></button>
-      <button><img src="./src/images/icon-tiktok.svg" alt=""></button>
-      <button><img src="./src/images/icon-whatsapp.svg" alt=""></button>
+       <div class = "contato-buttons">
+        <button><img src="/src/images/insta.svg" alt=""></button>
+        <button><img src="/src/images/TikTok.svg" alt=""></button>
+        <button><img src="/src/images/Link.svg" alt=""></button>
+      </div>
     </aside>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14610.384943400844!2d-46.6801928!3d-23.7261086!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b4bb5ee23%3A0x602b54d54441b2c7!2sColuna%20Sem%20Dor%20-%20Clinica%20de%20Quiropraxia%20e%20Fisioterapia!5e0!3m2!1spt-BR!2sbr!4v1748795553395!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
   <footer>
     <img src="./src/images/logo.png" alt="">
@@ -159,4 +160,3 @@
     <img src="./src/images/icon-whatsapp.svg" alt="">
   </footer>
 </body>
->>>>>>> feature-Pedro
