fix: contato link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </aside>
   </section>
   <section class="sobre-nos">
-    <aside>
+    <aside class="texts">
       <h1>Sobre nós</h1>
       <p>A Clínica Coluna Sem Dor foi inaugurada em janeiro de 2020, com o objetivo de oferecer aos pacientes com dor
         crônica, especialmente na coluna, um espaço especializado para tratamento de qualidade e personalizado. Apesar
