--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
       <a href="">CONTATO</a>
     </nav>
     <div class="div-navbar-buttons">
-      <a href="https://www.instagram.com/colunasemdoroficial/" class="navbar-buttons"><img src="./src/images/icon-instagram.svg" alt="" class="navbar-icons"></a>
-      <a href="https://www.tiktok.com/@colunasemdoroficial" class="navbar-buttons"><img src="./src/images/icon-tiktok.svg" alt="" class="navbar-icons"></a>
-      <a href="https://wa.me/5511963571929" target="_blank" class="navbar-buttons"><img src="./src/images/icon-whatsapp.svg" alt="" class="navbar-icons"></a>
+      <a href="https://www.instagram.com/colunasemdoroficial/" class="navbar-buttons"><img
+          src="./src/images/icon-instagram.svg" alt="" class="navbar-icons"></a>
+      <a href="https://www.tiktok.com/@colunasemdoroficial" class="navbar-buttons"><img
+          src="./src/images/icon-tiktok.svg" alt="" class="navbar-icons"></a>
+      <a href="https://wa.me/5511963571929" target="_blank" class="navbar-buttons"><img
+          src="./src/images/icon-whatsapp.svg" alt="" class="navbar-icons"></a>
     </div>
   </header>
   <main class="hero">
@@ -119,7 +122,50 @@
         na coluna, é aplicado pelas instrutoras especializadas Marcia Pirrozelle e Geovana Souza. Assim, oferecemos um
         atendimento integrado e de alta qualidade, adequado às necessidades de cada paciente.</p>
     </aside>
-    <img src="" alt="">
+    <div class="carousel" aria-label="Galeria de Imagens">
+      <ol class="carousel__viewport">
+        <li id="carousel__slide1" class="carousel__slide">
+          <img src="./src/assets/galeria/ga-01.jpeg" alt="Tratamento 1">
+          <a href="#carousel__slide6" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+          <a href="#carousel__slide2" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+        </li>
+        <li id="carousel__slide2" class="carousel__slide">
+          <img src="./src/assets/galeria/ga-02.jpeg" alt="Tratamento 2">
+          <a href="#carousel__slide1" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+          <a href="#carousel__slide3" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+        </li>
+        <li id="carousel__slide3" class="carousel__slide">
+          <img src="./src/assets/galeria/ga-03.jpeg" alt="Tratamento 3">
+          <a href="#carousel__slide2" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+          <a href="#carousel__slide4" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+        </li>
+        <li id="carousel__slide4" class="carousel__slide">
+          <img src="./src/assets/galeria/ga-04.jpeg" alt="Tratamento 4">
+          <a href="#carousel__slide3" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+          <a href="#carousel__slide5" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+        </li>
+        <li id="carousel__slide5" class="carousel__slide">
+          <img src="./src/assets/galeria/ga-05.jpeg" alt="Tratamento 5">
+          <a href="#carousel__slide4" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+          <a href="#carousel__slide6" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+        </li>
+        <li id="carousel__slide6" class="carousel__slide">
+          <img src="./src/assets/galeria/ga-06.jpeg" alt="Tratamento 6">
+          <a href="#carousel__slide5" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+          <a href="#carousel__slide7" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+        </li>
+        <li id="carousel__slide7" class="carousel__slide">
+          <img src="./src/assets/galeria/ga-07.jpeg" alt="Tratamento 6">
+          <a href="#carousel__slide6" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+          <a href="#carousel__slide8" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+        </li>
+        <li id="carousel__slide8" class="carousel__slide">
+          <img src="./src/assets/galeria/ga-08.jpeg" alt="Tratamento 6">
+          <a href="#carousel__slide7" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+          <a href="#carousel__slide1" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+        </li>
+      </ol>
+    </div>
   </section>
   <section class="depoimentos">
     <h1>Depoimentos de Quem Voltou a Viver Sem Dor</h1>
@@ -147,8 +193,10 @@
         <p>CONHEÇA E ACOMPANHE<br>
           A NOSSA REDES SOCIAIS</p>
       </div>
-      <a href="https://www.instagram.com/colunasemdoroficial/" class="contato-button"><img src="./src/images/icon-instagram-black.svg" alt=""></a>
-      <a href="https://www.tiktok.com/@colunasemdoroficial" class="contato-button"><img src="./src/images/icon-tiktok-black.svg" alt=""></a>
+      <a href="https://www.instagram.com/colunasemdoroficial/" class="contato-button"><img
+          src="./src/images/icon-instagram-black.svg" alt=""></a>
+      <a href="https://www.tiktok.com/@colunasemdoroficial" class="contato-button"><img
+          src="./src/images/icon-tiktok-black.svg" alt=""></a>
       <a href="" class="contato-button"><img src="./src/images/icon-linkedin-black.svg" alt=""></a>
     </aside>
     <iframe
