--- a/index.html
+++ b/index.html
@@ -128,17 +128,17 @@
     </div>
     <a href="">Quero Me Sentir Melhor!</a>
   </section>
-  <section class="contato">
-    <aside class="contato-aside">
+<section class="contato">
+    <aside>
       <h1>Contato</h1>
       <div class="contato-text">
-        <img src="./src/images/icon-whatsapp-black.svg" alt="">
+        <img src="/src/images/Frame/zap.png" alt="">
         <p>DÚVIDAS E INFORMAÇÕES:<br>
           (11) 96357-1929<br>
           oficialcolunasemdor@gmail.com</p>
       </div>
       <div class="contato-text">
-        <img src="./src/images/icon-location-black.svg" alt="">
+        <img src="/src/images/Frame/localidade.png" alt="">
         <p>ONDE ESTAMOS:<br>
           Rua São Benedito, 418 - Jardim Santo Amaro, São Paulo - SP</p>
       </div>
@@ -147,14 +147,13 @@
         <p>CONHEÇA E ACOMPANHE<br>
           A NOSSA REDES SOCIAIS</p>
       </div>
-      <button class="contato-button"><img src="./src/images/icon-instagram-black.svg" alt=""></button>
-      <button class="contato-button"><img src="./src/images/icon-tiktok-black.svg" alt=""></button>
-      <button class="contato-button"><img src="./src/images/icon-linkedin-black.svg" alt=""></button>
+       <div class = "contato-buttons">
+        <button><img src="/src/images/insta.svg" alt="" href="https://www.instagram.com/colunasemdoroficial/"></button>
+        <button><img src="/src/images/TikTok.svg" alt="" href="https://www.tiktok.com/@colunasemdoroficial"></button>
+        <button><img src="/src/images/Link.svg" alt=""></button>
+      </div>
     </aside>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.74478100944!2d-46.7018355!3d-23.6493094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b4bb5ee23%3A0x602b54d54441b2c7!2sColuna%20Sem%20Dor%20-%20Clinica%20de%20Quiropraxia%20e%20Fisioterapia!5e0!3m2!1sen!2sbr!4v1748799978357!5m2!1sen!2sbr"
-      width="60%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14610.384943400844!2d-46.6801928!3d-23.7261086!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b4bb5ee23%3A0x602b54d54441b2c7!2sColuna%20Sem%20Dor%20-%20Clinica%20de%20Quiropraxia%20e%20Fisioterapia!5e0!3m2!1spt-BR!2sbr!4v1748795553395!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
   <footer>
     <div class="footer-wrapper">
