--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
       <p>A Clínica Coluna Sem Dor foi inaugurada em janeiro de 2020, com o objetivo de oferecer aos pacientes com dor
         crônica, especialmente na coluna, um espaço especializado para tratamento de qualidade e personalizado. Apesar
         do desafio inicial da pandemia, conseguimos crescer e melhorar nossas instalações, incorporando novas técnicas e
-        tecnologias para melhorar os resultados.<br>
-        Atualmente, contamos com a Maca de Flexodistração, que permite tração, mobilizações e manipulações realizadas da
+        tecnologias para melhorar os resultados.</p><br>
+        <p>Atualmente, contamos com a Maca de Flexodistração, que permite tração, mobilizações e manipulações realizadas da
         coluna. Além disso, oferecemos tratamentos como Quiropraxia, Ozonioterapia, Ondas de Choque, Fisioterapia
-        Regenerativa Eco Guiada e Pilates, todas as apresentações para o transtorno e reabilitação da coluna.<br>
-        Nosso atendimento é conduzido pela fisioterapeuta e fundadora da clínica, Alessandra Souza, formada há 11 anos e
+        Regenerativa Eco Guiada e Pilates, todas as apresentações para o transtorno e reabilitação da coluna.</p><br>   
+        <p>Nosso atendimento é conduzido pela fisioterapeuta e fundadora da clínica, Alessandra Souza, formada há 11 anos e
         especializada no tratamento de coluna. O Pilates, uma das práticas mais recomendadas para quem sofre com dores
         na coluna, é aplicado pelas instrutoras especializadas Marcia Pirrozelle e Geovana Souza. Assim, oferecemos um
         atendimento integrado e de alta qualidade, adequado às necessidades de cada paciente.</p>
