--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- ICONS -->
   <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
-
+  <script src="https://static.elfsight.com/platform/platform.js" async></script>
 </head>
 
 <body>
@@ -114,10 +114,12 @@
         crônica, especialmente na coluna, um espaço especializado para tratamento de qualidade e personalizado. Apesar
         do desafio inicial da pandemia, conseguimos crescer e melhorar nossas instalações, incorporando novas técnicas e
         tecnologias para melhorar os resultados.</p><br>
-        <p>Atualmente, contamos com a Maca de Flexodistração, que permite tração, mobilizações e manipulações realizadas da
+      <p>Atualmente, contamos com a Maca de Flexodistração, que permite tração, mobilizações e manipulações realizadas
+        da
         coluna. Além disso, oferecemos tratamentos como Quiropraxia, Ozonioterapia, Ondas de Choque, Fisioterapia
-        Regenerativa Eco Guiada e Pilates, todas as apresentações para o transtorno e reabilitação da coluna.</p><br>   
-        <p>Nosso atendimento é conduzido pela fisioterapeuta e fundadora da clínica, Alessandra Souza, formada há 11 anos e
+        Regenerativa Eco Guiada e Pilates, todas as apresentações para o transtorno e reabilitação da coluna.</p><br>
+      <p>Nosso atendimento é conduzido pela fisioterapeuta e fundadora da clínica, Alessandra Souza, formada há 11 anos
+        e
         especializada no tratamento de coluna. O Pilates, uma das práticas mais recomendadas para quem sofre com dores
         na coluna, é aplicado pelas instrutoras especializadas Marcia Pirrozelle e Geovana Souza. Assim, oferecemos um
         atendimento integrado e de alta qualidade, adequado às necessidades de cada paciente.</p>
@@ -169,12 +171,10 @@
   </section>
   <section class="depoimentos">
     <h1>Depoimentos de Quem Voltou a Viver Sem Dor</h1>
-    <div class="depoimento-area">
-
-    </div>
+    <div class="elfsight-app-63ea8195-80f3-4a99-8d82-edc05e4cf097" data-elfsight-app-lazy></div>
     <a href="">Quero Me Sentir Melhor!</a>
   </section>
-<section class="contato">
+  <section class="contato">
     <aside>
       <h1>Contato</h1>
       <div class="contato-text">
@@ -199,7 +199,10 @@
           src="./src/images/icon-tiktok-black.svg" alt=""></a>
       <a href="" class="contato-button"><img src="./src/images/icon-linkedin-black.svg" alt=""></a>
     </aside>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14610.384943400844!2d-46.6801928!3d-23.7261086!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b4bb5ee23%3A0x602b54d54441b2c7!2sColuna%20Sem%20Dor%20-%20Clinica%20de%20Quiropraxia%20e%20Fisioterapia!5e0!3m2!1spt-BR!2sbr!4v1748795553395!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14610.384943400844!2d-46.6801928!3d-23.7261086!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b4bb5ee23%3A0x602b54d54441b2c7!2sColuna%20Sem%20Dor%20-%20Clinica%20de%20Quiropraxia%20e%20Fisioterapia!5e0!3m2!1spt-BR!2sbr!4v1748795553395!5m2!1spt-BR!2sbr"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
   <footer>
     <div class="footer-wrapper">
