add: background-color

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
   </section>
   <section class="depoimentos">
     <h1>Depoimentos de Quem Voltou a Viver Sem Dor</h1>
+    <!-- Elfsight Google Reviews | Untitled Google Reviews -->
     <div class="elfsight-app-63ea8195-80f3-4a99-8d82-edc05e4cf097" data-elfsight-app-lazy></div>
     <a href="">Quero Me Sentir Melhor!</a>
   </section>
