--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <aside class="hero-aside">
       <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
       <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
-      <button><a href="">Quero Alívio Agora!</a></button>
+      <a href="https://wa.me/5511963571929">Quero Alívio Agora!</a>
     </aside>
   </main>
   <section class="tratamentos">
@@ -72,7 +72,7 @@
         <li class="tratamentos-li"><span class="tratamentos-span">Pilates Clínico:</span> Força, flexibilidade e
           reabilitação funcional</li>
       </ul>
-      <a href="">Descubra Seu Tratamento!</a>
+      <a href="https://wa.me/5511963571929">Descubra Seu Tratamento!</a>
     </aside>
     <div class="tratamentos-images">
       <div class="tratamentos-images-left">
@@ -173,7 +173,7 @@
     <h1>Depoimentos de Quem Voltou a Viver Sem Dor</h1>
     <!-- Elfsight Google Reviews | Untitled Google Reviews -->
     <div class="elfsight-app-63ea8195-80f3-4a99-8d82-edc05e4cf097" data-elfsight-app-lazy></div>
-    <a href="" class="depoimentos-a">Quero Me Sentir Melhor!</a>
+    <a href="https://wa.me/5511963571929" class="depoimentos-a">Quero Me Sentir Melhor!</a>
   </section>
   <section class="contato">
     <aside>
