--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./src/styles/reset.css" />
   <link rel="stylesheet" href="./src/styles/style.css">
-  <!-- <link rel="stylesheet" href="./src/styles/header.css" />
-<link rel="stylesheet" href="./src/styles/main.css" />
-<link rel="stylesheet" href="./src/styles/footer.css" />
-<link rel="stylesheet" href="./src/styles/tratamentos.css" />
-<link rel="stylesheet" href="./src/styles/nav.css" /> -->
+  <link rel="stylesheet" href="./src/styles/responsive.css">
+
 
   <!-- ICONS -->
   <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
