feat: opacity main

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
     </div>
   </header>
   <main class="hero">
-    <aside class="hero-aside">
-      <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
-      <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
-      <a href="https://wa.me/5511963571929">Quero Alívio Agora!</a>
-    </aside>
+    <div class="opacity">
+      <aside class="hero-aside">
+        <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
+        <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
+        <a href="https://wa.me/5511963571929">Quero Alívio Agora!</a>
+      </aside>
+    </div>
   </main>
   <section class="tratamentos">
     <aside class="tratamentos-aside">
