--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./src/styles/reset.css" />
   <link rel="stylesheet" href="./src/styles/style.css">
-  <link rel="stylesheet" href="./src/styles/responsive.css">
+  <!-- <link rel="stylesheet" href="./src/styles/responsive.css"> -->
 
 
   <!-- ICONS -->
@@ -24,14 +24,14 @@
 
 <body>
   <header>
-    <img src="./src/images/logo.png" alt="Logo da clinica 'Coluna sem dor'">
+    <img src="./src/images/logo.png" alt="Logo da clinica 'Coluna sem dor'" class="logo">
     <nav>
       <a href="">HOME</a>
       <a href="">SERVIÇOS</a>
       <a href="">QUEM SOMOS</a>
       <a href="">CONTATO</a>
     </nav>
-    <div class="div-navbar-buttons">
+    <div id="div-navbar-buttons">
       <a href="https://www.instagram.com/colunasemdoroficial/" class="navbar-buttons"><img
           src="./src/images/icon-instagram.svg" alt="" class="navbar-icons"></a>
       <a href="https://www.tiktok.com/@colunasemdoroficial" class="navbar-buttons"><img
@@ -40,20 +40,21 @@
           src="./src/images/icon-whatsapp.svg" alt="" class="navbar-icons"></a>
     </div>
   </header>
-  <main class="hero">
-    <div class="opacity">
-      <aside class="hero-aside">
-        <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
-        <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
+  <main id="hero">
+    <div id="opacity">
+      <aside id="hero-aside">
+        <h1>Você Sofre com Dores Nas Costas,<br> Estresse ou Lesões?</h1>
+        <p>Conheça o Método Integrado que Está Transformando a Saúde de<br> Quem Mora em São Paulo!</p>
         <a href="https://wa.me/5511963571929">Quero Alívio Agora!</a>
       </aside>
     </div>
   </main>
-  <section class="tratamentos">
-    <aside class="tratamentos-aside">
-      <h1>Tratamentos Avançados para Corpo e Mente em Equilíbrio</h1>
+  <section id="tratamentos">
+    <aside id="tratamentos-aside">
+      <h1>Tratamentos Avançados para<br>
+         Corpo e Mente em Equilíbrio</h1>
       <h2>Combinação de terapias que aceleram sua recuperação e melhoram sua qualidade de vida</h2>
-      <ul class="tratamentos-ul">
+      <ul id="tratamentos-ul">
         <li class="tratamentos-li"><span class="tratamentos-span">Quiropraxia:</span> Realinhamento vertebral para
           alívio rápido de dores crônicas</li>
         <li class="tratamentos-li"><span class="tratamentos-span">Maca de Flexo-distração:</span> Técnica segura para
@@ -73,7 +74,7 @@
       </ul>
       <a href="https://wa.me/5511963571929">Descubra Seu Tratamento!</a>
     </aside>
-    <div class="tratamentos-images">
+    <div id="tratamentos-images">
       <div class="tratamentos-images-left">
         <img src="./src/images/serv-1.jpeg" alt="" class="tratamentos-photos">
       </div>
@@ -86,12 +87,12 @@
       </div>
     </div>
   </section>
-  <section class="dra-alessandra">
-    <img src="./src/images/dra-alessandra.png" alt="" class="dra-alessandra-image">
-    <aside class="dra-alessandra-aside">
+  <section id="dra-alessandra">
+    <img src="./src/images/dra-alessandra.png" alt="" id="dra-alessandra-image">
+    <aside id="dra-alessandra-aside">
       <h1>Dra. Alessandra</h1>
       <h2>Especialidades</h2>
-      <ul class="list">
+      <ul id="list">
         <li class="list-item"><span class="list-image"></span>Quiropraxia clínica</li>
         <li class="list-item"><span class="list-image"></span>Quiropraxia diversificada de Janse</li>
         <li class="list-item"><span class="list-image"></span>Quiropraxia método thompson</li>
@@ -106,8 +107,8 @@
       </ul>
     </aside>
   </section>
-  <section class="sobre-nos">
-    <aside class="texts">
+  <section id="sobre-nos">
+    <aside id="texts">
       <h1>Sobre nós</h1>
       <p>A Clínica Coluna Sem Dor foi inaugurada em janeiro de 2020, com o objetivo de oferecer aos pacientes com dor
         crônica, especialmente na coluna, um espaço especializado para tratamento de qualidade e personalizado. Apesar
