--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
       </ol>
     </div>
   </section>
-  <section class="depoimentos">
+  <section id="depoimentos">
     <h1>Depoimentos de Quem Voltou a Viver Sem Dor</h1>
     <!-- Elfsight Google Reviews | Untitled Google Reviews -->
     <div class="elfsight-app-63ea8195-80f3-4a99-8d82-edc05e4cf097" data-elfsight-app-lazy></div>
-    <a href="https://wa.me/5511963571929" class="depoimentos-a">Quero Me Sentir Melhor!</a>
+    <a href="https://wa.me/5511963571929" id="depoimentos-a">Quero Me Sentir Melhor!</a>
   </section>
-  <section class="contato">
+  <section id="contato">
     <aside>
       <h1>Contato</h1>
       <div class="contato-text">
